# ceo-chatbot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.chatbot  README.md  app.yaml.template  chainlit.md  cloudbuild.yaml  cloudrun_Dockerfile  cloudrun_cloudbuild.yaml  pyproject.toml  requirements.txt  run_test_at_root.py  test_init_db.py
.github/workflows/: cd.yml
app/: dependencies.py  lifespan.py  main.py  settings.py
conf/base/: extract_docs_config.yml  prompts.yml  rag_config.yml
demo/: chat_app.py
demo/chainlit/chainlit-demo/: pyproject.toml
demo/chainlit/chainlit-demo/src/chainlit_demo/: __init__.py  demo.py
notebooks/: test_notebook.ipynb
scripts/: build_index.py  extract_docs.py  run_test_in_scripts.py  test_rag.py
services/ceo_build_index/: Dockerfile  pyproject.toml
services/ceo_build_index/src/ceo_build_index/: __init__.py  chunking.py  config.py  index_builder.py  loaders.py  main.py  settings.py
services/ceo_ingest_docs/: Dockerfile  pyproject.toml
services/ceo_ingest_docs/src/ceo_ingest_docs/: __init__.py  config.py  github_loader.py  main.py  settings.py
services/ceo_rag_chatbot/: Dockerfile  pyproject.toml
services/ceo_rag_chatbot/src/ceo_rag_chatbot/: __init__.py  config.py  dependencies.py  embeddings.py  lifespan.py  llm.py  main.py  retriever.py  schemas.py
services/ceo_rag_chatbot/src/ceo_rag_chatbot/rag/: llm.py  pipeline.py  retriever.py
services/ceo_rag_chatbot/src/ceo_rag_chatbot/routes/: chat.py  health.py
src/: a_b.py  chunk.py  run_test_in_src.py
src/ceo_chatbot/: config.py  embeddings.py  storage.py
src/ceo_chatbot/ingest/: chunking.py  embeddings.py  gcs_uploader.py  github_loader.py  index_builder.py  loaders.py
src/ceo_chatbot/rag/: interpreter.py  llm.py  pipeline.py  retriever.py
tests/: simulate_conversation.py  test_a_b.py  test_ceo_docs_citations.py  test_collect_earth_scenarios.py  test_storage.py  test_utils.py  vector_db_exists.py
tests/app/: conftest.py  test_app.py
tests/build_index/: test_build_config.py  test_device.py  test_loaders.py
tests/chatbot/: test_interpretation.py  test_retriever.py  test_schemas.py
tests/core/: test_storage_methods.py  test_yaml_utils.py
tests/ingest/: test_github_loader.py  test_ingest_config.py
