[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceo-chatbot"
version = "0.1.0"
description = "A project that syncs CEO documentation, builds a vector db from it, and runs a chatbot over the vector db"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "pyyaml",
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
# Packages for document syncing with GCS
extract = []

# Packages for generating the parsing, chunking, and creating the embeddings
pipeline = [
    "faiss-cpu>=1.7.4",
    "torch>=2.9.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "accelerate>=1.11.0",
    "numpy>=2.2.6",
    "unstructured[rst]>=0.18.21",
]
# Identical to above, but using gpu
pipeline-gpu = [
    "faiss-gpu-cu12>=1.13.0",
    "torch>=2.9.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "accelerate>=1.11.0",
    "numpy>=2.2.6",
    "unstructured[rst]>=0.18.21",
    "bitsandbytes>=0.48.2",
]
# Dependencies for the chatbot
chatbot = [
    "faiss-cpu>=1.7.4",
    "torch>=2.9.1",
    "sentence-transformers>=5.1.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "google-genai>=1.63.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.7",
    "pytest>=8.4.2",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
