[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceo-chatbot"
version = "0.1.0"
description = "A project that syncs CEO documentation, builds a vector db from it, and runs a chatbot over the vector db"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "pyyaml",
    "google-cloud-storage>=2.18.0",
    "ceo_chatbot_core"
]

[tool.uv.workspace]
members = [
    "packages/ceo_chatbot_core",
    "services/ceo_ingest_docs",
    "services/ceo_build_index",
    "services/ceo_rag_chatbot",
]

[tool.uv.sources]
ceo_chatbot_core = {workspace = true}

[project.optional-dependencies]
# Packages for document syncing with GCS
extract = []

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.7",
    "pytest>=8.4.2",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
