[project]
name = "ceo-build-index"
version = "0.1.0"
description = "Service to build a FAISS index from the CEO document store"
readme = "README.md"
authors = [
    { name = "Arif Syraj", email = "126988341+arif-syr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic", 
    "pydantic-settings",
    "pyyaml",
    "faiss-cpu",
    "langchain-core",
    "langchain-community",
    "langchain-huggingface",
    "langchain-text-splitters",
    "transformers",
    "sentence-transformers",
    "torch",
    "faiss-cpu",
    "unstructured[rst]",                                                                                
    "ceo-chatbot-core"
]

[tool.uv.sources]
ceo_chatbot_core = {workspace = true}
torch = {index = "pytorch-cpu"}

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
build-index = "ceo_build_index.main:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
