[project]
name = "ceo-ingest-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arif Syraj", email = "126988341+arif-syr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
