[project]
name = "ceo-rag-chatbot"
version = "0.1.0"
description = "The FastAPI server and RAG chatbot. Running this will start the FastAPI server and the chatbot over the RAG db"
readme = "README.md"
authors = [
    { name = "Arif Syraj", email = "126988341+arif-syr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "uvicorn",
    "torch",
    "sentence-transformers>=5.1.2",
    "faiss-cpu",
    "transformers",
    "fastapi[standard]",
    "google-genai",
    "ceo_chatbot_core",
    "langchain-community",
    "langchain-core",
    "langchain-huggingface"
]

[tool.uv.sources]
ceo_chatbot_core = {workspace = true}

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
chatbot = "ceo_rag_chatbot.main:run"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
